Fix Firebug issues on Safari

--- a/src/client/assets/styles/extras.scss
+++ b/src/client/assets/styles/extras.scss
@@ -48,10 +48,14 @@
 
 iframe#FirebugUI {
 	z-index: 1000 !important; /* so that can load *beneath* the progress splash-screen (z-index of 10,000) */
-	position: static !important;
-	box-sizing: border-box;
 	outline: none;
 	border: none;
+}
+
+.snippet-frame {
+	width: 100%;
+	border: none;
+	outline: none;
 }
 
 .runner-notification {
